app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
 @import "bootstrap-sprockets";
 @import "bootstrap";

$color1: rgba(255,255,255,1);
$teal: #13ACB1;
$purple: #543c5d;
$teal: darken(red, 10%);
$carouselHeight: 500px;

 html {
   min-height: 100vh;
 }

 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     height: 100%;
     min-height: 100vh;
     background: #fff;
     height: 100%;
     position: relative;
     padding-bottom: 50px;
 }

 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
     text-transform: uppercase;
     font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
     letter-spacing: 1px;
 }

 p {
     font-size: 1.25em;
     line-height: 1.6;
     color: #000;
 }

 hr {
     max-width: 400px;
     border-color: #999999;
 }

 .brand,
 .address-bar {
     display: none;
 }

 .navbar-brand {
     text-transform: uppercase;
     font-weight: 900;
     letter-spacing: 2px;
     font: inherit;
 }

 .navbar-nav {
     text-transform: uppercase;
     font-weight: 400;
     letter-spacing: 3px;
 }

 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
   background-color: rgba(230, 230, 230, 0.4);
 }

 .img-full {
     min-width: 100%;
 }

 .brand-before,
 .brand-name {
     text-transform: capitalize;
 }

 .brand-before {
     margin: 15px 0;
 }

 .brand-name {
     margin: 0;
     font-size: 4em;
 }

 .tagline-divider {
     margin: 35px auto 3px;
     max-width: 250px;
     border-color: #999999;
 }

 .box {
     margin: 20px auto;
     padding: 30px 15px;
 }

 .intro-text {
     text-transform: uppercase;
     font-size: 1.25em;
     font-weight: 400;
     letter-spacing: 1px;
 }

 .img-border {
     float: none;
     margin: 0 auto 0;
     border: #999999 solid 1px;
 }

 .img-left {
     float: none;
     margin: 0 auto 0;
 }

 .img-center {
   display: block;
   margin: 0 auto;
 }

 footer {
     background: #fff;
     background: rgba(255,255,255,0.9);
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 50px;
 }

 footer p {
     margin: 0;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 }

 .alsoView .col-sm-3 {
     margin-top: 25px;
     height: 223px;
 }

 .product-img {
     margin: 0 auto;
 }

 .alsoView>div>a>img {
     width: 100%;
     height: 100%;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
     margin: 0 auto;
 }
 @media screen and (min-width:768px) {
     .brand {
         display: inherit;
         margin: 0;
         padding: 30px 0 10px;
         text-align: center;
         text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
         font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 5em;
         font-weight: 700;
         line-height: normal;
         color: #333;
     }

     .top-divider {
         margin-top: 0;
     }

     .img-left {
         float: left;
         margin-right: 25px;
     }

     .address-bar {
         display: inherit;
         margin: 0;
         padding: 0 0 40px;
         text-align: center;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
         text-transform: uppercase;
         font-size: 1.25em;
         font-weight: 400;
         letter-spacing: 3px;
         color: #333;
     }

     .navbar {
         border-radius: 0;
     }

     .navbar-header {
         display: none;
     }

     .navbar {
         min-height: 0;
     }

     .navbar-default {
         border: none;
         background: #fff;
         margin-bottom: 0 !important;
     }

     .nav {
       width: 100%;
       text-align: center;
     }

     .nav>li {
       text-align: center;
       display: inline-block;
       float: none;
     }

     .nav>li>a {
        font-size: 16px;
        padding: 20px 0px;
     }

     .navbar-nav>li>a {
         line-height: normal;
     }

     .navbar-nav {
         display: table;
         float: none;
         margin: 0 auto;
         table-layout: fixed;
         font-size: 1.25em;
     }

     .col-sm-4 {
         padding: 5px;
     }

     .alsoView .col-sm-3 {
     margin-top: 0px;
     }

     .product-img {
     margin: 0 auto;
     }

     .fin-but {
         height: 222px;
     }

     .fin-but>a>button {
         margin-top: 20%;
     }
 }

 @media screen and (min-width:860px) {
   .nav>li>a {
      font-size: 18px;
   }
 }

 .carousel-inner {
   height: $carouselHeight;
   overflow: hidden;
 }

 @media screen and (min-width:1200px) {
 }

 .modal-open {
     padding-right: 0 !important;
 }
 .brand>a {
     color: inherit;
 }

 .brand>a:hover {
     text-decoration: none;
     color: inherit;
     font: inherit;
 }

 .product-ul {
     font-size: 18px;
 }

 .glyphicon {
     font-size: 16px;
     color: black;
 }

 a:hover {
     text-decoration: none;
     font: inherit;
     color: inherit;
 }

 .map {
     box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 5px;
 }

 .shadow {
         box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
 }

 .alsoView>h3 {
     margin-top: -10px;
     margin-bottom: 20px;
 }

 .alsoView>div>a>img {
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
     margin: 0 auto;

 }
/* ... */

